--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul>
             <li>
                 <a href="">Investor Relations</a>
-                <a href="">Add Restrauant</a>
-                <a href="">Lon in</a>
+                <a href="">Add Restaurant</a>
+                <a href="">Log in</a>
                 <a href="">Sign up</a>
             </li>
         </ul>
